namespace Streamline.Core.Decisions;

public abstract class Decision
{
    public abstract bool Evaluate();
}