namespace Streamline.Core.Nodes;

public interface INode
{
    
}