namespace Streamline.Core.Workflow;

public interface IWorkFlowState
{
    
}