using Streamline.Core.Nodes;
using Streamline.Core.Workflow.WorkflowContext;

namespace Streamline.Core.Workflow;

public class Workflow
{
    public INode currentNode;
    public IContext context;
    public IWorkFlowState state;
    public INode startNode;

    public void Start()
    {
        
    }

    public void Pause()
    {
        
    }

    public void Resume()
    {
        
    }

    public void Stop()
    {
        
    }
}